src/public/css/style.css
/* ... */
.animal-list-container .filter-form .custom-control,
.custom-control > label {
  width: 100%;
  justify-content: left;
}

.animal-list-container .card-group {
  padding: 5vh 2.5vw 5vh 2.5vw;
  display: inline-block;
  position: relative;
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
}

.animal-list-container .card-group .card {
  justify-self: center;
  border-color: transparent;
  border-radius: 10px;
  position: relative;
  width: 350px;
  height: 500px;
  overflow: hidden;
  -webkit-box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.36);
  -moz-box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.36);
  box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.36);
}
.animal-list-container .card-group .card-img-top {
  background-color: black;
  margin-top: 3rem;
  object-fit: contain;
  max-height: 50%;
  transition: transform 0.3s;
}
.animal-list-container .card-group .card-img-top:hover {
  transform: scale(1.5);
}

.animal-list-container .card-group .card .card-body {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-column-gap: 0;
}

.animal-list-container .card-group .card h5 {
  overflow: hidden;
  line-height: 1;
}
.animal-list-container .card-group .card .buttons * {
  display: block;
  height: min-content;
  padding: 0px;
  border-radius: 0;
}
.animal-list-container .card-group .card .buttons div {
  cursor: default;
}

.animal-list-container .card-group .card .btn-iniciar {
  margin-top: 0.5rem;
  grid-column: 1/-1;
}

.animal-list-container .card-group .card .caracteristics {
  background-color: #ebebeb;
  padding: 0.5rem;
  border-radius: 5px;
  grid-column: 1/-1;

  overflow-y: hidden;
  text-overflow: ellipsis;
}

/*-------------------------------form---------------------------------*/

.form-main-wrapper {
  padding: 150px 0;
  min-height: min-content;
  background: linear-gradient(45deg, #a17059, #131b30);
}

.silhouette {
  opacity: 20%;
  width: 100%;
  position: fixed;
}

.form-main-wrapper a:focus,
.form-main-wrapper a:active {
  text-decoration: none;
  outline: none;
  transition: all 300ms ease 0s;
  -moz-transition: all 300ms ease 0s;
  -webkit-transition: all 300ms ease 0s;
  -o-transition: all 300ms ease 0s;
  -ms-transition: all 300ms ease 0s;
}

.form-main-wrapper .form-container {
  width: 720px;
  background: #fff;
  margin: 0 auto;
  box-shadow: 0px 10px 9.9px 0.1px rgba(0, 0, 0, 0.05);
  -moz-box-shadow: 0px 10px 9.9px 0.1px rgba(0, 0, 0, 0.05);
  -webkit-box-shadow: 0px 10px 9.9px 0.1px rgba(0, 0, 0, 0.05);
  -o-box-shadow: 0px 10px 9.9px 0.1px rgba(0, 0, 0, 0.05);
  -ms-box-shadow: 0px 10px 9.9px 0.1px rgba(0, 0, 0, 0.05);
  border-radius: 10px;
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
  -o-border-radius: 10px;
  -ms-border-radius: 10px;
}

.form-main-wrapper .form-content {
  padding: 40px 60px 32px 60px;
  position: relative;
}

.form-main-wrapper .form-title {
  font-size: 2.5rem;
}

.form-main-wrapper .form-textbox {
  position: relative;
}
.form-main-wrapper .form-textbox label {
  color: #888;
}

.form-main-wrapper #pass {
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  margin-top: 1px;
}

.form-main-wrapper #email {
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  border-bottom: 1px;
}

.form-main-wrapper .submit {
  background: #1da0f2;
  color: #fff;
  width: 100%;
  border: none;
  margin-top: 40px;
  padding: 15px 20px;
  border-radius: 5px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  -o-border-radius: 5px;
  -ms-border-radius: 5px;
  font-size: 1.2rem;
}
.form-main-wrapper .submit:hover {
  background: #0c85d0;
}

.form-main-wrapper .register {
  text-align: center;
  color: #888;
  margin-top: 63px;
}

.form-main-wrapper .register-link {
  color: #1da0f2;
  text-decoration: none;
}
.form-main-wrapper .register-link:hover {
  text-decoration: underline;
}

.form-main-wrapper input:-webkit-autofill {
  -webkit-box-shadow: 0 0 0 30px white inset;
}

/**--------------------------------------------------------Employees list-------------------------------------*/

.employees-list-container {
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
}

.employees-list-container .wrapper {
  margin: 0 auto;
  padding: 40px;
  max-width: 800px;
}

.employees-list-container .table {
  margin: 0 0 40px 0;
  width: 100%;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
  display: table;
}
@media screen and (max-width: 580px) {
  .employees-list-container .table {
    display: block;
  }
}

.employees-list-container .row {
  display: table-row;
  background: #f6f6f6;
}
.employees-list-container .row:nth-of-type(odd) {
  background: #e9e9e9;
}
.employees-list-container .row.header {
  font-weight: 900;
  color: var(--palette-white);
  background: var(--palette-red);
}

@media screen and (max-width: 580px) {
  .employees-list-container .row {
    padding: 14px 0 7px;
    display: block;
  }
  .employees-list-container .row.header {
    padding: 0;
    height: 6px;
  }
  .employees-list-container .row.header .cell {
    display: none;
  }
  .employees-list-container .row .cell {
    margin-bottom: 10px;
  }
  .employees-list-container .row .cell:before {
    margin-bottom: 3px;
    content: attr(data-title);
    min-width: 98px;
    font-size: 10px;
    line-height: 10px;
    font-weight: bold;
    text-transform: uppercase;
    color: #969696;
    display: block;
  }
}

.employees-list-container .cell {
  padding: 6px 12px;
  display: table-cell;
}
@media screen and (max-width: 580px) {
  .employees-list-container .cell {
    padding: 2px 16px;
    display: block;
  }
}

/** -------------------------------adoptions-----------------------------*/

.adoptions-add .img-wrap {
  width: 100%;
  background-color: black;
  display: flex;
  justify-content: center;
}
.adoptions-add .animal-img {
  width: 100%;
  height: auto;
}
/* ... */

